------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------
July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Changed license notices a bit

July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* levitating plants and mushrooms move about
	
July 7 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Vomit messages work...

July 7 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* "You look down. You see an active mine." in the dark. no more...
	* Headless zombies can no longer vomit.
	* ?,*,|,<,>,/,\,: are no longer acceptable for names (windows doesn't like them)
	* ForcedVomit messages are different for mommos and dolphins
	* 'If player tries to apply when he has no arms, the message says that there are no items to apply.' bug corrected.. 
	* When you don't get to the highscore list your reason of death is shown
	
July 7 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Copyright notices added to sources, headers and script
	
Heikki Sairanen <firstname.lastname@tut.fi>

	* fountain test removed. sorry
	
Heikki Sairanen <firstname.lastname@tut.fi>

	* Fountains can now throw player to other fountains in near levels or same level.
	
Heikki Sairanen <firstname.lastname@tut.fi>

	* Leprosy improved a lot and is cureable
	
Heikki Sairanen <firstname.lastname@tut.fi>

	* aclocal.m4 updates or something strange like that anyway :)
	
<Many entries missing, sorry...>

??? Timo Kiviluoto <firstname.lastname@kolumbus.fi>

<entry incomplete>

	* It is no longer possible to kick stones under walls
	* It is no longer possible to detect traps by floating over them, dropping
	  items and checking if the total weight of the stack is greater than the
	  items' weights' sum
