@@ -779,3 +779,11 @@ void festring::SwapData(festring& Str)
   Str.Reserved = TReserved;
   Str.OwnsData = TOwnsData;
 }
+
+long festring::GetCheckSum() const
+{
+  long Counter = 0;
+  for(ushort c = 0; c < GetSize(); ++c)
+    Counter = long(Data[c]);
+  return Counter;
+}
