@@ -6,6 +6,11 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+
+July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>
+
+	* Added wizard mode command Polymorph (key '[')
+
 July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>
 
 	* Changed license notices a bit
